examples/test/testpolicy5473.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy5473
  namespace: namespace282
spec:
  podSelector:
    matchLabels:
      key14: value4
      key25: value27
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value37
          key42: value27
      podSelector:
        matchLabels:
          key35: value46
          key27: value44
